// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextGroup mount render correctly 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  text-align: justify;
}

.c0 > * {
  display: inline;
  margin-right: 0.4rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <TextGroup
    align="justify"
    inline={true}
  >
    <styled.div
      align="justify"
      inline={true}
    >
      <div
        className="c0"
      >
        <Texts>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my first text. This is my first text. This is my first text. This is my first text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my second text. This is my second text. This is my second text. This is my second text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my third text. This is my third text. This is my third text. This is my third text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my fourth text. This is my fourth text. This is my fourth text. This is my fourth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my fifth text. This is my fifth text. This is my fifth text. This is my fifth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my sixth text. This is my sixth text. This is my sixth text. This is my sixth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my seventh text. This is my seventh text. This is my seventh text. This is my seventh text.
              </span>
            </styled.span>
          </Text>
        </Texts>
      </div>
    </styled.div>
  </TextGroup>
</ThemeProvider>
`;

exports[`TextGroup mount render correctly with align 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  text-align: right;
}

.c0 > * {
  display: inline;
  margin-right: 0.4rem;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <TextGroup
    align="right"
    inline={true}
  >
    <styled.div
      align="right"
      inline={true}
    >
      <div
        className="c0"
      >
        <Texts>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my first text. This is my first text. This is my first text. This is my first text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my second text. This is my second text. This is my second text. This is my second text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my third text. This is my third text. This is my third text. This is my third text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my fourth text. This is my fourth text. This is my fourth text. This is my fourth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my fifth text. This is my fifth text. This is my fifth text. This is my fifth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my sixth text. This is my sixth text. This is my sixth text. This is my sixth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my seventh text. This is my seventh text. This is my seventh text. This is my seventh text.
              </span>
            </styled.span>
          </Text>
        </Texts>
      </div>
    </styled.div>
  </TextGroup>
</ThemeProvider>
`;

exports[`TextGroup mount render correctly with inline 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  text-align: justify;
}

.c0 > * {
  display: block;
  margin-right: 0;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableHeaderColor": "#999B9E",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <TextGroup
    align="justify"
    inline={false}
  >
    <styled.div
      align="justify"
      inline={false}
    >
      <div
        className="c0"
      >
        <Texts>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my first text. This is my first text. This is my first text. This is my first text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my second text. This is my second text. This is my second text. This is my second text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my third text. This is my third text. This is my third text. This is my third text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my fourth text. This is my fourth text. This is my fourth text. This is my fourth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my fifth text. This is my fifth text. This is my fifth text. This is my fifth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my sixth text. This is my sixth text. This is my sixth text. This is my sixth text.
              </span>
            </styled.span>
          </Text>
          <Text
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <styled.span
              capitalize={false}
              italic={false}
              opacity={1}
              size="1rem"
              uppercase={false}
              weight={400}
            >
              <span
                className="c1"
                opacity={1}
                size="1rem"
              >
                This is my seventh text. This is my seventh text. This is my seventh text. This is my seventh text.
              </span>
            </styled.span>
          </Text>
        </Texts>
      </div>
    </styled.div>
  </TextGroup>
</ThemeProvider>
`;
